--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="" class="logo__text">
                     <img class="logo" src="./assets/logo.svg" alt="">Treact
                 </a>
-
+                
                 <button class="hamburger">
                     <i class="fas fa-bars"></i>
                 </button>
@@ -33,6 +33,7 @@
 
                     <button class="button nav__link nav__link--primary">Sign Up</button>
                 </ul>
+
             </nav>
 
             <div class="header__container">
@@ -591,6 +592,7 @@
                             })
                         }
                     </script>
+
                 </div>
             </div>
         </div>
@@ -627,7 +629,7 @@
                             <li class="footer__link--list"><a class="footer__link" href="">Blog</a></li>
                             <li class="footer__link--list"><a class=" footer__link" href="">FAQs</a></li>
                             <li class="footer__link--list"> <a class="footer__link" href="">Support</a></li>
-                            <li class="footer__link--list"><a class=" footer__link" x1 href="">About Us</a></li>
+                            <li class="footer__link--list"><a class=" footer__link" href="">About Us</a></li>
                         </div>
                     </div>
 
