--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Treact Project</title>
     <link rel="stylesheet" href="./styles.css">
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
-    <script src="index.js"></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
