fixed email placing

--- a/index.html
+++ b/index.html
@@ -31,20 +31,27 @@
                 </ul>
 
                 <button class="nav__burger" onclick="openMenu()">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="light___StyledMenuIcon-lj69nl-15 cPytOe">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="light___StyledMenuIcon-lj69nl-15 cPytOe">
                         <line x1="3" y1="12" x2="21" y2="12"></line>
                         <line x1="3" y1="6" x2="21" y2="6"></line>
                         <line x1="3" y1="18" x2="21" y2="18"></line>
                     </svg>
                 </button>
 
-                
+
             </nav>
 
             <div class="menu__backdrop">
 
                 <button class="menu__btn" onclick="closeMenu()">
-                    <i class="fas fa-times"></i>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="light___StyledCloseIcon-sc-lj69nl-14 brSrPp">
+                        <line x1="18" y1="6" x2="6" y2="18"></line>
+                        <line x1="6" y1="6" x2="18" y2="18"></line>
+                    </svg>
                 </button>
 
                 <div class="menu__links">
@@ -206,10 +213,10 @@
                     <button class="button quality__button">Learn More</button>
                 </div>
 
-                
-
                 <div class="row__columns--right quality__columns--right">
-                    <img class="img__quality" src="./assets/qualityservice.png" alt="">
+                    <figure class="quality__img--container"><img class="img__quality" src="./assets/qualityservice.png"
+                            alt="">
+                    </figure>
                 </div>
             </div>
         </div>
